# substance-legacy

./: .bash_profile  .gitignore  .gitmodules  .jshintrc  .modules.config  CMakeLists.txt  Cakefile  ExtendedNSFileManager.m  Gruntfile.js  LICENSE  README.md  ReleaseCheatSheet.md  TODO  TODO.md  _config.yml  app.js  article.js  buttons.css  composer.css  config.example.json  config.json.example  document.js  erronous-ops.json  gulpfile.js  helpers.js  index.html  index.js  karma.conf.js  module.json  package.json  project.json  sandbox.hb  server.js  settings.json  setup.js  substance.css  substance.js  substance.py  ui_templates.html  update.py  (+2 more)
app/: CMakeLists.txt  redis.conf
app/extension/core/: CMakeLists.txt  core_utils.i  resource_provider.h
app/extension/docstore/redis/: CMakeLists.txt  RedisDocStore.cxx  RedisDocStore.h  RedisDocStore.i  RedisDocStore_wrap_manual.cxx  hiredis_access_impl.cxx  operation.h  operation_director_v8.cxx  operation_impl.cxx  operation_impl.h  redis_acces.i  redis_acces_wrap.cxx  redis_access.hpp  redis_access.i  redis_error.cpp  redis_error.hpp  redisdocstore.js
app/extension/redis/: CMakeLists.txt  hiredis_access.hpp  hiredis_access_impl.cxx  redis_access.hpp  redis_access.i  redis_error.cpp  redis_error.hpp
app/extension/swig-contribution/jsobjects/: CMakeLists.txt  jsobjects.h  jsobjects_jsc.cxx  jsobjects_v8.cxx
app/gtk/: CMakeLists.txt  main.cxx  mainframe.cxx  substance.xpm  webframe.cxx  webframe.h  webinspector.cxx  webinspector.h  wxresourceprovider.cxx  wxresourceprovider.h
app/gtk/core/: CMakeLists.txt  core_utils_initializer.cxx  core_utils_initializer.h
app/osx/: CMakeLists.txt  ExtendedNSFileManager.h  ExtendedNSFileManager.m  ExtendedNSFileManager.mm  ExtendedWebView.h  ExtendedWebView.mm  Info-CMake.plist  MainMenu.xib  MainView.h  MainView.m  MainView.mm  WebViewDelegates.h  WebViewDelegates.mm  appDelegate.h  appDelegate.m  appDelegate.mm
app/osx/Resources/: Substance.icns
basics/: event_emitter.js  helpers.js  index.js
config/: BoostMinimal.cmake  ConfigureVariables.cmake  ExportTarget.cmake  Externals.cmake  GTest-1.6.cmake  Hiredis.cmake  JSObjects.cmake  JavaScriptCore.cmake  MacOSXib.cmake  OSXExternals.cmake  Redis.cmake  RedisDocStore.cmake  SwigJS.cmake  UnixExternals.cmake  boost_minimal.sh  default.keymap  default.keymap.json  linux.keymap.json  states.json  windows.keymap.json
console/: console.js  index.html
couch/: .couchappignore  _id
data/: default_document.json  elife_00311.json  empty.json  empty_document.json  erronous_document.json  example.json  hello.json  hello_document.json  lorem_ipsum.json  schema.json  scientist_example.md  substance.json
db/: kollwi_seed.js  schema copy.json  schema.json  seed.js
docs/: technical-summary.md
document/: document.js
fixtures/: article.js  austria.js  austria.json
layouts/: app.html  doc.html  test.html
lib/: async.js  backbone.js  base64.js  dance.js  data.js  document.js  handlebars.js  jquery.timeago.js  jquery.transloadit2.js  keymaster.js  node.js  operation.js  proper.js  showdown.js  sorted_hash.js  surface.js  talk.js  underscore.js  unveil.js
py/: git.py  npm.py  util.py  version.py
src/: app.js  boot.js  composer.js  content_graph.js  content_graph_editor.js  content_node_types.js  content_node_widgets.js  event-emitter.js  helpers.js  model.js  notifier.js  path-adapter.js  replicator.js  router.js  session.js  snippets.js  state_machine.js  substance-view.js  substance.js  util.js  uuid.js
styles/: 01_shared.less  02_layout.less  03_editor.less  05_icons.less  06_tabs.less  08_codemirror.less  browser.less  chosen.less  collection.css  comments.less  composer.css  confirm_collaboration.less  console.css  controls.less  dashboard.less  editor.css  editor.less  explore.less  font-awesome.css  form.less  header.less  home.less  icons.less  import.less  ken.css  layout.less  library.css  main.less  mixins.less  network.less  node.less  proper.less  recover_password.less  reset_password.less  results.less  search.less  shared.less  signup.less  startpage.less  substance.css  (+5 more)
stylesheets/: app.css  browser.css  global.css  lpl_ui.css  newsroom_ui.css  reset.css  widgets.css
sublime/: Context.sublime-menu  Default (Linux).sublime-keymap  Default (OSX).sublime-keymap  Git Synch.sublime-commands  Main.sublime-menu  Status.JSON-tmLanguage  Status.tmLanguage  Status.tmLanguage.cache  SubstanceGit.sublime-settings  batch_exec.py  git_status.py  utils.py
substance-article/: substance-article.js  substance-article.min.js
substance-reader/: LICENSE  config.json  index.html  substance-reader-0.4.0.css  substance-reader-0.4.0.js  substance-reader-0.4.0.min.js
surface/: panel.js
templates/: app.html  browser.ejs  browser.html  browser_explore.ejs  browser_not_supported.ejs  browser_results.ejs  browser_search.ejs  browser_tab.ejs  browser_user.ejs  collaborators.ejs  comments.ejs  confirm_collaboration.ejs  controls_insert.ejs  controls_move.ejs  controls_movetarget.ejs  dashboard.ejs  document.ejs  document.html  document_browser.ejs  document_export.ejs  document_invite.ejs  document_lens.ejs  document_publish.ejs  document_settings.ejs  document_subscribers.ejs  document_tab.ejs  document_versions.ejs  document_wrapper.ejs  documents.html  edit_attributes.ejs  explore.ejs  facets.ejs  header-styles.html  header.ejs  home.ejs  image_editor.ejs  import.ejs  login_form.ejs  multi_string_editor.ejs  network.ejs  (+18 more)
test/: CMakeLists.txt  attributes.js  boot.js  console.css  console.js  document_engine.js  index.html  karma.conf.js  query.js  redisdocstore_test.js  sanitize.js  seed.js  serve.js  test-ui.css  test-ui.js  test.html  test.js  validation.js
test/docstore/redis/: CMakeLists.txt  RedisDocStoreTestAccess.hpp  redis_unit.cxx  test_access.cpp  test_access.hpp
ui/: annotation_component.js  component.js  dropdown_component.js  font_awesome_icon.js  heading_component.js  modal.js  modal_panel.js  paragraph_component.js  scrollbar.js  table_tool_component.js  text_property_component.js  tool_component.js
(+504 files in other folders)
